package model;
public interface Identifiable {
    Long getId();
}
